--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 remote_theme: pages-themes/minimal
 title: Yonghee Shin
-description: BS Student @ [POSTECH EE](https://eee.postech.ac.kr/)
+description: BS Student @ POSTECH EE
 logo: /assets/img/profile.jpg
